--- a/index.html
+++ b/index.html
@@ -1,81 +1,63 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Portfolio</title>
+<html lang="en-us">
+
+<head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
-  </head>
-  <body>
-    <!-- Header -->
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Kirstyn Rowen</title>
+</head>
+
+<body>
     <header>
-      <h1>Welcome to the store!</h1>
+        <h1>Welcome to my portfolio!</h1>
+        
     </header>
-
-    <!-- Navbar -->
     <nav>
-      <a href="#">About Me</a>
-      <a href="#">My work</a>
-      <a href="#">Contact</a>
+        <a href="#about-me">About Me</a>
+        <a href="#my-work">My Work</a>
+        <a href="#contact">Contact</a>
     </nav>
-
-    <!-- Body -->
     <main>
-      <!-- Sidebar -->
-      <aside>
-        <h2>The product cards would look better if...</h2>
-        <li>the corners were rounded out</li>
-        <li>there was a shadow</li>
-        <li>they were rotated slightly</li>
-      </aside>
-      <div class="bio">
-        <section>
-            <header>About Me</header>
-            <p>Price: $300</p>
-          </section>
-      </div>
-     <!-- Product Cards -->
-      <div class="products">
-        <section class="card">
-            <header>Project 1</header>
-            <img src="./assets/images/camera.jpg" alt="black camera" />
-            <p>Price: $300</p>
-          </section>
-        <section class="card">
-          <header>Camera</header>
-          <img src="./assets/images/camera.jpg" alt="black camera" />
-          <p>Price: $300</p>
-        </section>
-        <section class="card">
-          <header>Tablet</header>
-          <img src="./assets/images/tablet.jpg" alt="tablet held in hands" />
-          <p>Price: $150</p>
-        </section>
-        <section class="card">
-          <header>Toilet Paper</header>
-          <img
-            src="./assets/images/toilet-paper.jpg"
-            alt="rolls of toilet paper in a basket"
-          />
-          <p>Price: $30</p>
-        </section>
-        <section class="card">
-          <header>Wooden Spoons</header>
-          <img
-            src="./assets/images/wooden-spoons.jpg"
-            alt="4 wooden spoons with different seasonings"
-          />
-          <p>Price: $10</p>
-        </section>
-      </div>
+        <aside>
+            <h3 id="about-me">About Me</h3>
+            <p>&nbsp;</p>
+            <hr />
+            <p>&nbsp;</p>
+            <p>
+                Born and raised in Phoenix, I earned my B.A. in Political Science from American University. Since 2016, I have worked for multiple firms running digital fundraising programs for candidates for state and federal offices, non-profits, and advocacy groups.
+            </p>
+        </aside>
+        <div>
+            <section id="my-work">
+                <img src="./assets/images/diego-ph-VmRxRz0gD_s-unsplash.jpg" class="float-left" />
+                <h2>Project 1</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus laudantium praesentium voluptatibus. Error optio illum minima recusandae exercitationem odit ducimus assumenda totam, necessitatibus, dolores dolorum quae facere, voluptate consequatur! Perspiciatis.
+                </p>
+            </section>
+            <section>            
+                <img src="./assets/images/acton-crawford-NflJmUuaYVI-unsplash.jpg" class="float-right" />
+                <h2>Project 2</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, nesciunt voluptas ab harum minima quod magnam omnis hic praesentium. Saepe, ipsam! Rem harum, consectetur quibusdam sequi repudiandae aliquam vitae distinctio.
+                </p>
+            </section>
+            <section>            
+                <img src="./assets/images/andy-he-PuJc2Sodi94-unsplash.jpg" class="float-left" />
+                <h2>Project 3</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A rem quasi perferendis. Fugit facilis iure laudantium necessitatibus, sequi commodi sapiente similique cupiditate, exercitationem aperiam incidunt cumque dolorum quam itaque? Repellat?
+                </p>
+            </section>
+        </div>
     </main>
+    <div>
+        <section id="contact">
+           <h2>Contact</h2> 
+           <p>e: kirstyn.rowen@gmail.com</p>
+           <p>p: 623-742-5354</p>
+        </section>
+    </div>
+</body>
 
-    <!-- Footer -->
-    <footer>
-      <h3>
-        Open Chrome DevTools --> Toggle device toolbar --> Resize the browser
-        window!
-      </h3>
-    </footer>
-  </body>
 </html>
